--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-chartjs-2-line-chart",
+  "name": "react-chartjs-2",
   "version": "1.0.0",
-  "description": "",
+  "description": "折れ線グラフの場合",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -21,5 +21,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
