--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-chartjs-2",
+  "name": "react-chartjs-2-line-chart",
   "version": "1.0.0",
-  "description": "折れ線グラフの場合",
+  "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
@@ -13,7 +13,10 @@
     "react-scripts": "3.0.1"
   },
   "devDependencies": {
-    "typescript": "3.3.3"
+    "typescript": "3.3.3",
+    "@types/faker": "5.5.3",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,10 +24,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
